--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,3 +1,12 @@
 .registerButton{
     margin-bottom: 20px;
 }
+
+.searchBox{
+    margin-right: 10px;
+    margin-left: 20px;
+}
+
+.resultBox{
+    margin-top: 30px;
+}
